--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@trpc/next": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -64,7 +65,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.525.0",
     "next": "^15.2.3",
-    "next-auth": "5.0.0-beta.25",
+    "next-auth": "^4.22.1",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
@@ -82,6 +83,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.0.15",
+    "@types/bcryptjs": "^3.0.0",
     "@types/node": "^20.14.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
