--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "formidable": "^3.5.4",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.525.0",
     "next": "^15.2.3",
@@ -84,6 +85,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.0.15",
     "@types/bcryptjs": "^3.0.0",
+    "@types/formidable": "^3.4.6",
     "@types/node": "^20.14.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
